refactor / auto refactoring codestyle and change handle lifecykle Create and Update date in Shop on Spring control. Create Base ckass for all schemas